--- a/index.html
+++ b/index.html
@@ -30,8 +30,13 @@
       }
       .schedule-container {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        grid-template-columns: repeat(5, 1fr);
         gap: 20px;
+      }
+      @media (max-width: 700px) {
+        .schedule-container {
+          grid-template-columns: 1fr;
+        }
       }
       .day-card {
         background: #fff;
@@ -54,6 +59,7 @@
         display: block;
         margin-bottom: 5px;
         color: #555;
+        cursor: pointer;
       }
       textarea {
         width: 100%;
@@ -71,6 +77,7 @@
         text-align: center;
         font-weight: bold;
         color: #7f8c8d;
+        cursor: pointer;
       }
       .download-button {
         margin: 30px auto 0;
@@ -87,8 +94,59 @@
       .download-button:hover {
         background-color: #2980b9;
       }
+
+      /* Modal Styles */
+      .modal-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5);
+        display: none;
+        align-items: center;
+        justify-content: center;
+        z-index: 1000;
+      }
+      .modal {
+        background: white;
+        padding: 20px;
+        border-radius: 8px;
+        width: 300px;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+      }
+      .modal input {
+        padding: 8px;
+        font-size: 1em;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+      }
+      .modal-buttons {
+        display: flex;
+        justify-content: flex-end;
+        gap: 10px;
+      }
+      .modal-buttons button {
+        padding: 8px 16px;
+        font-size: 1em;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+      .save-btn {
+        background-color: #3498db;
+        color: white;
+      }
+      .cancel-btn {
+        background-color: #7f8c8d;
+        color: white;
+      }
     </style>
   </head>
+
   <body>
     <header>
       <h1>Weekly Activity Schedule</h1>
@@ -99,7 +157,17 @@
 
     <div class="schedule-container" id="schedule"></div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+    <!-- Modal for Editing -->
+    <div class="modal-overlay" id="modalOverlay">
+      <div class="modal">
+        <input type="text" id="editInput" />
+        <div class="modal-buttons">
+          <button class="cancel-btn" onclick="closeModal()">Cancel</button>
+          <button class="save-btn" onclick="saveModal()">Save</button>
+        </div>
+      </div>
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <script>
       const days = ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"];
@@ -114,6 +182,7 @@
       ];
 
       const scheduleContainer = document.getElementById("schedule");
+      let currentEditableElement = null;
 
       days.forEach((day) => {
         const dayCard = document.createElement("div");
@@ -129,13 +198,16 @@
 
           const timeLabel = document.createElement("span");
           timeLabel.className = "time-label";
-          timeLabel.textContent = `${block.time}`;
+          timeLabel.textContent = block.time;
+          timeLabel.addEventListener("dblclick", () => openModal(timeLabel));
+
           timeBlock.appendChild(timeLabel);
 
           if (block.fixed) {
             const fixedText = document.createElement("div");
             fixedText.className = "fixed-times";
             fixedText.textContent = block.label;
+            fixedText.addEventListener("dblclick", () => openModal(fixedText));
             timeBlock.appendChild(fixedText);
           } else {
             const textarea = document.createElement("textarea");
@@ -149,6 +221,28 @@
         scheduleContainer.appendChild(dayCard);
       });
 
+      function openModal(element) {
+        currentEditableElement = element;
+        document.getElementById("editInput").value = element.textContent;
+        document.getElementById("modalOverlay").style.display = "flex";
+        setTimeout(() => {
+          document.getElementById("editInput").focus();
+        }, 100);
+      }
+
+      function closeModal() {
+        document.getElementById("modalOverlay").style.display = "none";
+        currentEditableElement = null;
+      }
+
+      function saveModal() {
+        const newValue = document.getElementById("editInput").value.trim();
+        if (currentEditableElement && newValue !== "") {
+          currentEditableElement.textContent = newValue;
+        }
+        closeModal();
+      }
+
       function downloadPDF() {
         const originalSchedule = document.getElementById("schedule");
         const pdfLayout = originalSchedule.cloneNode(true);
@@ -158,7 +252,6 @@
         pdfLayout.style.gap = "20px";
         pdfLayout.style.width = "100%";
 
-        //  PDF
         const pdfContainer = document.createElement("div");
         pdfContainer.appendChild(pdfLayout);
         document.body.appendChild(pdfContainer);
@@ -176,7 +269,7 @@
           .set(opt)
           .save()
           .then(() => {
-            document.body.removeChild(pdfContainer); // Clean up after downloading
+            document.body.removeChild(pdfContainer);
           });
       }
     </script>
