--- a/index.html
+++ b/index.html
@@ -98,6 +98,63 @@
         background-color: #2980b9;
       }
 
+      /* attendance area  */
+      .attendance-wrapper {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+      }
+
+      .attendance-grid {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        gap: 20px;
+        max-width: 1400px;
+      }
+
+      .attendance-card {
+        background: #fff;
+        padding: 15px;
+        border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+        font-size: 0.85em;
+      }
+
+      .attendance-card h3 {
+        font-size: 1em;
+        margin-bottom: 8px;
+        color: #2c3e50;
+      }
+
+      .attendance-card input[type="date"],
+      .attendance-card input[type="text"] {
+        padding: 6px;
+        font-size: 0.9em;
+      }
+
+      .attendance-card button {
+        padding: 6px 10px;
+        font-size: 0.85em;
+      }
+
+      .attendance-grid.pdf-mode {
+        transform: scale(0.75);
+        transform-origin: top center;
+      }
+
+      @media print {
+        .attendance-grid {
+          transform: scale(0.75);
+          transform-origin: top center;
+        }
+      }
+
+      @media (max-width: 700px) {
+        .attendance-grid {
+          grid-template-columns: 1fr;
+        }
+      }
+
       /* Modal */
       .modal-overlay {
         position: fixed;
@@ -160,22 +217,24 @@
 
     <div class="schedule-container" id="schedule"></div>
     <section id="attendance-section" style="margin-top: 50px">
-      <div class="day-card">
-        <h2>Attendance Tracker</h2>
+      <h2 style="text-align: center; margin-bottom: 20px">
+        Attendance Tracker
+      </h2>
 
-        <div style="margin-bottom: 20px">
-          <label for="employeeName" style="font-weight: bold"
-            >Employee Name:</label
-          >
-          <input
-            type="text"
-            id="employeeName"
-            placeholder="Enter employee name"
-            style="width: 100%; padding: 8px; margin-top: 5px"
-          />
-        </div>
+      <div style="max-width: 1400px; margin: 0 auto; margin-bottom: 30px">
+        <label for="employeeName" style="font-weight: bold"
+          >Employee Name:</label
+        >
+        <input
+          type="text"
+          id="employeeName"
+          placeholder="Enter employee name"
+          style="width: 100%; padding: 8px; margin-top: 5px"
+        />
+      </div>
 
-        <div id="attendance-days"></div>
+      <div class="attendance-wrapper">
+        <div class="attendance-grid" id="attendance-days"></div>
       </div>
     </section>
 
@@ -272,6 +331,11 @@
         const scheduleClone = schedule.cloneNode(true);
         const attendanceClone = attendance.cloneNode(true);
 
+        // Force PDF mode styling
+        attendanceClone
+          .querySelector(".attendance-grid")
+          .classList.add("pdf-mode");
+
         scheduleClone.style.display = "grid";
         scheduleClone.style.gridTemplateColumns = "repeat(5, 1fr)";
         scheduleClone.style.gap = "20px";
@@ -321,17 +385,17 @@
         attendanceData.days[day] = { date: "", clients: [] };
 
         const dayBlock = document.createElement("div");
-        dayBlock.style.marginBottom = "30px";
+        dayBlock.className = "attendance-card";
         dayBlock.innerHTML = `
-    <h3 style="margin-top:20px;">${day}</h3>
-    <label for="${day}-date" style="font-weight: bold;">Date:</label>
-    <input type="date" id="${day}-date" style="width: 100%; padding: 8px; margin-top:5px; margin-bottom:10px;">
-    <div style="display: flex; gap: 10px; margin-top: 5px;">
-      <input type="text" id="${day}-clientName" placeholder="Enter client name" style="flex: 1; padding: 8px;">
-      <button onclick="addClient('${day}')" style="padding: 8px 12px; background-color: #3498db; border: none; color: white; border-radius: 4px; cursor: pointer;">Add</button>
-    </div>
-    <ul id="${day}-clientList" style="list-style: none; padding: 0; margin-top: 15px;"></ul>
-  `;
+  <h3>${day}</h3>
+  <label for="${day}-date" style="font-weight: bold;">Date:</label>
+  <input type="date" id="${day}-date" style="width: 100%; padding: 8px; margin-top:5px; margin-bottom:10px;">
+  <div style="display: flex; gap: 10px; margin-top: 5px;">
+    <input type="text" id="${day}-clientName" placeholder="Enter client name" style="flex: 1; padding: 8px;">
+    <button onclick="addClient('${day}')" style="padding: 8px 12px; background-color: #3498db; border: none; color: white; border-radius: 4px; cursor: pointer;">Add</button>
+  </div>
+  <ul id="${day}-clientList" style="list-style: none; padding: 0; margin-top: 15px;"></ul>
+`;
         attendanceDaysContainer.appendChild(dayBlock);
       });
 
