save to local storage

--- a/schedule.html
+++ b/schedule.html
@@ -13,6 +13,13 @@
       <button class="download-button" onclick="downloadPDF()">
         Download as PDF
       </button>
+      <button
+        class="action-button"
+        onclick="window.location.href='index.html'"
+        style="margin-top: 15px"
+      >
+        ← Back to Home
+      </button>
     </header>
 
     <div class="schedule-container" id="schedule"></div>
