updated button styles

--- a/schedule.html
+++ b/schedule.html
@@ -11,14 +11,23 @@
       <h1>Weekly Activity Schedule</h1>
       <h3>Monday - Friday</h3>
       <button class="download-button" onclick="downloadPDF()">
-        Download as PDF
+         Download as PDF   
       </button>
       <button
         class="action-button"
         onclick="window.location.href='index.html'"
-        style="margin-top: 15px"
+        style="
+          margin-top: 15px;
+          background-color: #4caf50;
+          color: white;
+          padding: 10px 15px;
+          border: none;
+          border-radius: 5px;
+          cursor: pointer;
+          font-size: 1em;
+        "
       >
-        ← Back to Home
+                ← Back to Home      
       </button>
     </header>
 
