user overview dashboard added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       <button id="openEmployeeFormBtn" class="action-button">
         Create New Employee
       </button>
+      <a href="dashboard.html" class="action-button" style="margin-top: 20px"
+        >View Main Dashboard</a
+      >
     </header>
 
     <section id="employeeFormSection" class="hidden">
