updated styles and removed button added

--- a/dashboard.html
+++ b/dashboard.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Main Dashboard</h1>
+      <h1 class="mainDashboardTitle">Main Dashboard</h1>
       <a href="index.html" class="action-button" style="margin-top: 20px"
         >← Back to Home</a
       >
