--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Weekly Schedule Maker - Home</h1>
+      <h1 class="title-homepage">Weekly Schedule Maker</h1>
       <button id="openEmployeeFormBtn" class="action-button">
         Create New Employee
       </button>
@@ -18,7 +18,7 @@
     </header>
 
     <section id="employeeFormSection" class="hidden">
-      <h2>Create New Employee</h2>
+      <h2 class="createNewEmployeeHome">Create New Employee</h2>
       <form id="employeeForm" class="employee-form">
         <label for="newEmployeeName">Employee Name:</label>
         <input type="text" id="newEmployeeName" required />
@@ -36,7 +36,7 @@
     </section>
 
     <section style="margin-top: 30px">
-      <h2>Employee List</h2>
+      <h2 class="employeeListNames">Employee List</h2>
       <ul id="employeeList" class="employee-list"></ul>
     </section>
 
