search bar and styles updated

--- a/index.html
+++ b/index.html
@@ -37,6 +37,21 @@
 
     <section style="margin-top: 30px">
       <h2 class="employeeListNames">Employee List</h2>
+      <input
+        type="text"
+        id="searchEmployees"
+        placeholder="Search employees..."
+        style="
+          padding: 10px;
+          margin: 20px auto 30px;
+          display: block;
+          width: 100%;
+          max-width: 400px;
+          border-radius: 8px;
+          border: 1px solid #ccc;
+        "
+      />
+
       <ul id="employeeList" class="employee-list"></ul>
     </section>
 
